--- a/Practice2/src/partials/portfolio-section.html
+++ b/Practice2/src/partials/portfolio-section.html
@@ -16,12 +16,26 @@
         <source media="(min-width: 320px)" srcset="./assets/images/blue-mountain-mobile.jpg">
         <img src="./assets/images/blue-mountain-mobile.jpg" alt="blue-mountain" class="maximum-size-img">
       </picture>
-      <div class="blue-mountain-text">
-        <h5></h5>
-        <p></p>
-        <div></div>
-        <p></p>
-        <div></div>
+      <div class="blue-mountain-common">
+        <h5 class="blue-mountain-heading">Blue Mountains</h5>
+        <p class="blue-mountain-text">17 Apr 2016</p>
+        <div class="blue-mountain-underline"></div>
+        <p class="blue-mountain-sub-text">Planning a vacation to Europe? No doubt you have certain expectations about
+          your upcoming journey.</p>
+        <div class="parameter">
+          <div class="parameter-sub parameter-sub-success">
+            <img src="./assets/images/views.png" alt="views" class="parameter-icon">
+            <p class="number">92924</p>
+          </div>
+          <div class="parameter-sub parameter-sub-success">
+            <img src="./assets/images/likes.png" alt="likes" class="parameter-icon">
+            <p class="number">1273</p>
+          </div>
+          <div class="parameter-sub">
+            <img src="./assets/images/comments.png" alt="comments" class="parameter-icon">
+            <p class="number">4894</p>
+          </div>
+        </div>
       </div>
     </div>
     <div class="portfolio-item portfolio-item-three">
@@ -49,13 +63,20 @@
       </picture>
     </div>
     <div class="portfolio-item portfolio-item-six">
-      <picture class="portfolio-img green-mountain-img">
-        <source media="(min-width: 1440px)" srcset="./assets/images/green-mountain-desktop.jpg">
-        <source media="(min-width: 768px)" srcset="./assets/images/green-mountain-tablet.jpg">
-        <source media="(min-width: 320px)" srcset="./assets/images/green-mountain-mobile.jpg">
-        <img src="./assets/images/green-mountain-mobile.jpg" alt="green-mountain" class="maximum-size-img">
-      </picture>
+      <!-- <picture class="portfolio-img valley-img">
+        <source media="(min-width: 1440px)" srcset="./assets/images/valley-desktop.jpg">
+        <source media="(min-width: 768px)" srcset="./assets/images/valley-tablet.jpg">
+        <source media="(min-width: 320px)" srcset="./assets/images/valley-mobile.jpg">
+        <img src="./assets/images/valley-mobile.jpg" alt="valley" class="maximum-size-img">
+      </picture> -->
+      <div class="item-six-common">
+      <p class="item-six-sub-heading">Scenery Photos</p>
+      <p class="item-six-sub-sub-heading">By Evgeny Metilan</p>
+      <div class="item-six-underline"></div>
+      <h5 class="item-six-main-heading">Wild
+        Nature</h5>
     </div>
+  </div>
     <div class="portfolio-item portfolio-item-seven">
       <picture class="portfolio-img valley-img">
         <source media="(min-width: 1440px)" srcset="./assets/images/valley-desktop.jpg">
