--- a/Practice2/src/styles/components/portfolio.css
+++ b/Practice2/src/styles/components/portfolio.css
@@ -17,49 +17,139 @@
 }
 
 .portfolio-item {
-  width: 100%;
+  /* width: 100%; */
 }
 
-.portfolio-img {
-  width: 100%;
-  height: 100%;
+.maximum-size-img-green-mountain {
+
 }
 
 .portfolio-container {
   display: grid;
   justify-content: center;
   grid-template-areas:
-    'left header header'
-    'menu menu right'
-    'article aside footer';
+    'i1 i2 i2'
+    'i3 i3 i4'
+    'i5 i6 i7';
   gap: 0px;
 }
 
 .portfolio-item-one {
-  grid-area: left;
+  grid-area: i1;
 }
 
 .portfolio-item-two {
-  grid-area: header;
+  grid-area: i2;
   position: relative;
 }
 
 .portfolio-item-three {
-  grid-area: menu;
+  grid-area: i3;
 }
 
 .portfolio-item-four {
-  grid-area: right;
+  grid-area: i4;
 }
 
 .portfolio-item-five {
-  grid-area: article;
+  grid-area: i5;
 }
 
 .portfolio-item-six {
-  grid-area: aside;
+  grid-area: i6;
 }
 
 .portfolio-item-seven {
-  grid-area: footer;
+  grid-area: i7;
+}
+
+.blue-mountain-common {
+  position: absolute;
+  left: 420px;
+  right: 40px;
+  top: 58px;
+  text-align: left;
+}
+
+.blue-mountain-heading {
+  font-size: var(--fs-tb-heading-default);
+  line-height: var(--lh-heading-wide);
+  font-weight: normal;
+  margin-bottom: 5px;
+}
+
+.blue-mountain-text {
+  font-size: var(--fs-medium);
+  line-height: var(--lh-heading-default);
+  font-weight: normal;
+  margin-bottom: 31px;
+  letter-spacing: 5.56%;
+}
+
+.blue-mountain-underline {
+  width: 32px;
+  height: 6px;
+  background-color: var(--c-light);
+  margin-bottom: 38px;
+}
+
+.blue-mountain-sub-text {
+  font-size: var(---fs-default);
+  line-height: var(--lh-default);
+  font-weight: normal;
+  margin-bottom: 24px;
+}
+
+.parameter {
+  display: flex;
+}
+
+.parameter-sub {
+  display: flex;
+}
+
+.parameter-sub-success {
+  margin-right: 30px;
+}
+
+.parameter-icon {
+  margin-right: 6px;
+}
+
+.number {
+  font-weight: normal;
+}
+
+.item-six-common {
+  padding-top: 60px;
+  padding-left: 40px;
+}
+
+.item-six-sub-heading {
+  font-size: var(--fs-base);
+  line-height: var(--lh-heading-wide);
+  color: var(--c-dark);
+  margin-bottom: 5px;
+}
+
+.item-six-sub-sub-heading {
+  font-size: var(--fs-medium);
+  line-height: var(--lh-heading-default);
+  color: var(--c-dark);
+  text-transform: uppercase;
+  margin-bottom: 31px;
+}
+
+.item-six-underline {
+  width: 32px;
+  height: 6px;
+  background-color: var(--c-dark);
+  margin-bottom: 37px;
+}
+
+.item-six-main-heading {
+  font-size: var(--fs-large);
+  line-height: 54px;
+  color: var(--c-dark);
+  max-width: 180px;
 }
