--- a/Practice2/src/partials/portfolio-section.html
+++ b/Practice2/src/partials/portfolio-section.html
@@ -36,6 +36,9 @@
             <p class="number">4894</p>
           </div>
         </div>
+        <div class="icon-sub">
+          <img src="./assets/images/views.png" alt="views" class="">
+        </div>
       </div>
     </div>
     <div class="portfolio-item portfolio-item-three">
@@ -63,12 +66,6 @@
       </picture>
     </div>
     <div class="portfolio-item portfolio-item-six">
-      <!-- <picture class="portfolio-img valley-img">
-        <source media="(min-width: 1440px)" srcset="./assets/images/valley-desktop.jpg">
-        <source media="(min-width: 768px)" srcset="./assets/images/valley-tablet.jpg">
-        <source media="(min-width: 320px)" srcset="./assets/images/valley-mobile.jpg">
-        <img src="./assets/images/valley-mobile.jpg" alt="valley" class="maximum-size-img">
-      </picture> -->
       <div class="item-six-common">
       <p class="item-six-sub-heading">Scenery Photos</p>
       <p class="item-six-sub-sub-heading">By Evgeny Metilan</p>
@@ -85,5 +82,16 @@
         <img src="./assets/images/valley-mobile.jpg" alt="valley" class="maximum-size-img">
       </picture>
     </div>
+  </div>
+  <div>
+    <ul class="list">
+      <i class="arrow left"></i></p>
+      <li class="number-list number-list-one">1</li>
+      <li class="number-list number-list-two">2</li>
+      <li class="number-list number-list-three">3</li>
+      <li class="number-list number-list-four">4</li>
+      <li class="number-list number-list-five">5</li>
+      <i class="arrow right"></i></p>
+    </ul>
   </div>
 </section>
