--- a/Practice2/src/styles/components/portfolio.css
+++ b/Practice2/src/styles/components/portfolio.css
@@ -16,17 +16,11 @@
   margin-top: 54px;
 }
 
-.portfolio-item {
-  /* width: 100%; */
-}
-
-.maximum-size-img-green-mountain {
-
-}
-
 .portfolio-container {
   display: grid;
   justify-content: center;
+  grid-template-columns: 380px 380px 380px;
+  grid-template-rows: 380px 380px 380px;
   grid-template-areas:
     'i1 i2 i2'
     'i3 i3 i4'
@@ -53,6 +47,11 @@
 
 .portfolio-item-five {
   grid-area: i5;
+}
+
+.maximum-size-img {
+  width: 100%;
+  height: 100%;
 }
 
 .portfolio-item-six {
@@ -152,4 +151,221 @@
   line-height: 54px;
   color: var(--c-dark);
   max-width: 180px;
+}
+
+.icon-sub {
+  display: none;
+}
+
+.list {
+  display: flex;
+  justify-content: center;
+  margin-top: 69px;
+}
+
+.number-list {
+  color: var(--c-dark);
+  font-size: var(--fs-medium);
+}
+
+.number-list-one {
+  margin-left: 60px;
+  margin-right: 35px;
+}
+
+.number-list-two {
+  margin-right: 39px;
+}
+
+.number-list-three {
+  margin-right: 39px;
+}
+
+.number-list-four {
+  margin-right: 39px;
+}
+
+.number-list-five {
+  margin-right: 60px;
+}
+
+.number-list:hover {
+  color: var(--c-warning);
+  /* background: var(--c-light); */
+  box-shadow: 0px 2px 4px var(--c-dark);
+}
+
+.arrow {
+  border-right: 2px solid var(--c-darker);
+  border-bottom: 2px solid var(--c-darker);
+  width: 10px;
+  height: 10px;
+  transform: rotate(-45deg);
+}
+
+.right {
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+}
+
+.left {
+  transform: rotate(135deg);
+  -webkit-transform: rotate(135deg);
+}
+
+@media only screen and (min-device-width: 768px) and (max-device-width: 1439px) {
+  .blue-mountain-heading {
+    font-size: var(--fs-tb-heading-medium);
+    line-height: var(--lh-heading-medium);
+  }
+
+  .blue-mountain-text {
+    font-size: var(--fs-tb-default);
+    line-height: var(--lh-tb-default);
+    margin-bottom: 20px;
+  }
+
+  .blue-mountain-underline {
+    width: 16px;
+    height: 4px;
+    margin-bottom: 24px;
+  }
+
+  .blue-mountain-sub-text {
+    font-size: var(--fs-tb-small);
+    line-height: var(--lh-tb-default);
+    margin-bottom: 10px;
+  }
+
+  .parameter-sub {
+    font-size: var(--fs-tb-small);
+    line-height: var(--lh-tb-default);
+  }
+
+  .portfolio-container {
+    grid-template-columns: 240px 240px 240px;
+    grid-template-rows: 240px 240px 240px;
+  }
+
+  .blue-mountain-common {
+    left: 258px;
+    right: 54px;
+    top: 41px;
+  }
+
+  .item-six-sub-heading {
+    font-size: var(--fs-success);
+    line-height: var(--lh-heading-medium);
+  }
+
+  .item-six-sub-sub-heading {
+    font-size: var(--fs-tb-default);
+    line-height: var(--lh-tb-default);
+    margin-bottom: 29px;
+  }
+
+  .item-six-underline {
+    width: 16px;
+    height: 4px;
+    margin-bottom: 25px;
+  }
+
+  .item-six-main-heading {
+    font-size: var(--fs-tb-heading-large);
+    line-height: var(--lh-heading-medium);
+    max-width: 102px;
+  }
+
+  .item-six-common {
+    padding-top: 32px;
+    padding-left: 22px;
+  }
+
+  .icon-sub {
+    display: none;
+  }
+}
+
+@media only screen and (max-device-width: 767px) {
+  .blue-mountain-heading {
+    font-size: var(--fs-default);
+    line-height: var(--lh-heading-medium);
+    margin-bottom: 2px;
+  }
+
+  .blue-mountain-text {
+    font-size: var(--fs-tb-default);
+    line-height: var(--lh-tb-default);
+    margin-bottom: 18px;
+  }
+
+  .blue-mountain-underline {
+    width: 14px;
+    height: 2px;
+    margin-bottom: 18px;
+  }
+
+  .blue-mountain-sub-text {
+    font-size: var(--fs-tb-small);
+    line-height: var(--lh-tb-default);
+    margin-bottom: 0;
+  }
+
+  .portfolio-container {
+    grid-template-columns: 145px 145px;
+    grid-template-rows: 145px 145px 145px 145px 145px;
+    grid-template-areas:
+      'i1 i4'
+      'i2 i2'
+      'i7 i5'
+      'i3 i3'
+      'i6 i6';
+  }
+
+  .blue-mountain-common {
+    left: 25px;
+    right: 22px;
+    top: 11px;
+  }
+
+  .item-six-sub-heading {
+    font-size: var(--fs-default);
+    line-height: var(--lh-heading-medium);
+    margin-bottom: 1px;
+  }
+
+  .item-six-sub-sub-heading {
+    font-size: var(--fs-tb-default);
+    line-height: var(--lh-tb-default);
+    margin-bottom: 10px;
+  }
+
+  .item-six-underline {
+    width: 14px;
+    height: 2px;
+    margin-bottom: 15px;
+  }
+
+  .item-six-main-heading {
+    font-size: var(--fs-base);
+    line-height: 28px;
+    max-width: 226px;
+  }
+
+  .item-six-common {
+    padding-top: 11px;
+    padding-left: 25px;
+  }
+
+  .parameter {
+    display: none;
+  }
+
+  .icon-sub {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    z-index: 1;
+    display: block;
+  }
 }
