--- a/Practice2/src/styles/components/portfolio.css
+++ b/Practice2/src/styles/components/portfolio.css
@@ -56,6 +56,7 @@
 
 .portfolio-item-six {
   grid-area: i6;
+  background-color: var(--c-success);
 }
 
 .portfolio-item-seven {
@@ -161,6 +162,7 @@
   display: flex;
   justify-content: center;
   margin-top: 69px;
+  padding-bottom: 75px;
 }
 
 .number-list {
@@ -191,7 +193,11 @@
 
 .number-list:hover {
   color: var(--c-warning);
-  /* background: var(--c-light); */
+  border: 1px solid;
+  border-radius: 50%;
+  width: 32px;
+  height: 32px;
+  text-align: center;
   box-shadow: 0px 2px 4px var(--c-dark);
 }
 
@@ -287,6 +293,12 @@
 }
 
 @media only screen and (max-device-width: 767px) {
+  .portfolio-heading {
+    font-size: var(--fs-heading-m-default);
+    line-height: var(--lh-tb-large);
+    padding-top: 29px;
+  }
+
   .blue-mountain-heading {
     font-size: var(--fs-default);
     line-height: var(--lh-heading-medium);
@@ -302,7 +314,7 @@
   .blue-mountain-underline {
     width: 14px;
     height: 2px;
-    margin-bottom: 18px;
+    margin-bottom: 15px;
   }
 
   .blue-mountain-sub-text {
@@ -363,9 +375,17 @@
 
   .icon-sub {
     position: absolute;
-    top: 24px;
-    right: 24px;
-    z-index: 1;
+    top: 26px;
+    right: 30px;
     display: block;
+  }
+
+  .number-list-one {
+    margin-left: 28px;
+    margin-right: 35px;
+  }
+
+  .number-list-five {
+    display: none;
   }
 }
