--- a/Practice2/src/partials/portfolio-section.html
+++ b/Practice2/src/partials/portfolio-section.html
@@ -22,20 +22,20 @@
         <div class="blue-mountain-underline"></div>
         <p class="blue-mountain-sub-text">Planning a vacation to Europe? No doubt you have certain expectations about
           your upcoming journey.</p>
-        <div class="parameter">
-          <div class="parameter-sub parameter-sub-success">
+        <ul class="parameter">
+          <li class="parameter-sub parameter-sub-success">
             <img src="./assets/images/views.png" alt="views" class="parameter-icon">
             <p class="number">92924</p>
-          </div>
-          <div class="parameter-sub parameter-sub-success">
+          </li>
+          <li class="parameter-sub parameter-sub-success">
             <img src="./assets/images/likes.png" alt="likes" class="parameter-icon">
             <p class="number">1273</p>
-          </div>
-          <div class="parameter-sub">
+          </li>
+          <li class="parameter-sub">
             <img src="./assets/images/comments.png" alt="comments" class="parameter-icon">
             <p class="number">4894</p>
-          </div>
-        </div>
+          </li>
+        </ul>
         <div class="icon-sub">
           <img src="./assets/images/views.png" alt="views" class="">
         </div>
@@ -67,13 +67,13 @@
     </div>
     <div class="portfolio-item portfolio-item-six">
       <div class="item-six-common">
-      <p class="item-six-sub-heading">Scenery Photos</p>
-      <p class="item-six-sub-sub-heading">By Evgeny Metilan</p>
-      <div class="item-six-underline"></div>
-      <h5 class="item-six-main-heading">Wild
-        Nature</h5>
+        <p class="item-six-sub-heading">Scenery Photos</p>
+        <p class="item-six-sub-sub-heading">By Evgeny Metilan</p>
+        <div class="item-six-underline"></div>
+        <h5 class="item-six-main-heading">Wild
+          Nature</h5>
+      </div>
     </div>
-  </div>
     <div class="portfolio-item portfolio-item-seven">
       <picture class="portfolio-img valley-img">
         <source media="(min-width: 1440px)" srcset="./assets/images/valley-desktop.jpg">
@@ -85,13 +85,13 @@
   </div>
   <div>
     <ul class="list">
-      <i class="arrow left"></i></p>
+      <i class="arrow left"></i>
       <li class="number-list number-list-one">1</li>
       <li class="number-list number-list-two">2</li>
       <li class="number-list number-list-three">3</li>
       <li class="number-list number-list-four">4</li>
       <li class="number-list number-list-five">5</li>
-      <i class="arrow right"></i></p>
+      <i class="arrow right"></i>
     </ul>
   </div>
 </section>
