--- a/Practice2/src/partials/gregory-section.html
+++ b/Practice2/src/partials/gregory-section.html
@@ -5,10 +5,11 @@
     <source media="(min-width: 320px)" srcset="./assets/images/gregory-background-mobile.png">
     <img src="./assets/images/gregory-background-mobile.png" alt="background" class="gregory-img">
   </picture>
-  <div>
-    <div>
+  <div class="gregory-container">
+    <div class="empty-container">
     </div>
     <div class="gregory-common">
+      <div class="gregory-content">
       <h5 class="gregory-heading">Gregory Francis</h5>
       <p class="gregory-sub-heading">CHIEF ENGINEER</p>
       <p class="gregory-text">I’ve started to work in company at 2009. Photographs are a way of preserving a moment in
@@ -18,6 +19,16 @@
         seemingly leap off the shelves at even the least tech-savvy. It surely seems old fashioned to talk about 35mm
         film
         and non-digital cameras in today’s day and age.</p>
+      </div>
+      <div class="btn-radio-common">
+        <ul class="btn-radio">
+          <li class="radio-success"></li>
+          <li class="radio-success"></li>
+          <li class="radio-success"></li>
+          <li class="radio-success"></li>
+          <li class="radio-success"></li>
+        </ul>
+      </div>
     </div>
   </div>
 </section>
