--- a/Practice2/src/partials/stay-in-touch-section.html
+++ b/Practice2/src/partials/stay-in-touch-section.html
@@ -1,35 +1,40 @@
 <section class="page-stay-in-touch">
-  <picture class="stay-in-touch-img">
-    <source media="(min-width: 1440px)" srcset="./assets/images/iphone.png">
-    <img src="./assets/images/iphone.png" alt="iphone" class="iphone-img">
-  </picture>
-  <div class="stay-in-touch-container-primary">
-    <h5 class="stay-in-touch-heading">Stay In Touch</h5>
-    <div class="input-common">
-      <input type="name" class="search" placeholder="Name*">
-      <input type="email" class="search" placeholder="Email*">
+  <h5 class="stay-in-touch-heading">Stay In Touch</h5>
+  <div class="stay-in-touch-container-common">
+    <picture class="stay-in-touch-img">
+      <source media="(min-width: 1440px)" srcset="./assets/images/iphone.png">
+      <img src="./assets/images/iphone.png" alt="iphone" class="iphone-img">
+    </picture>
+    <div class="stay-in-touch-container-primary">
+      <div class="input-common">
+        <input type="name" class="search search-common" placeholder="Name*">
+        <input type="email" class="search search-common" placeholder="Email*">
+      </div>
+      <input type="message" class="search search-success" placeholder="Message*">
+      <button type="button" class="btn btn-primary btn-submit">Submit</button>
     </div>
-    <input type="message" class="search" placeholder="Message*">
-  </div>
-  <div class="stay-in-touch-container-secondary">
-    <ul class="stay-in-touch-contact">
-      <li class="contact-success">
-        <img src="./assets/images/location.png" alt="location" class="parameter-icon">
-        <p class="contact-text">2300 W Arbutus Dr Citrus Springs, FL 34434, USA</p>
-      </li>
-      <li class="contact-success">
-        <img src="./assets/images/mail.png" alt="mail" class="parameter-icon">
-        <p class="contact-text">contact@hofmannui.net</p>
-      </li>
-      <li class="contact-success">
-        <img src="./assets/images/phone.png" alt="phone" class="parameter-icon">
-        <p class="contact-text">793-891-7938, 952-775-6021</p>
-      </li>
-    </ul>
-    <ul>
-      <li><img src="" alt=""></li>
-      <li></li>
-      <li></li>
-    </ul>
+    <div class="stay-in-touch-container-secondary">
+      <ul class="stay-in-touch-contact">
+        <li class="contact-success">
+          <img src="./assets/images/location.png" alt="location" class="stay-in-touch-icon">
+          <p class="contact-text">2300 W Arbutus Dr Citrus Springs, FL 34434, USA</p>
+        </li>
+        <li class="contact-success">
+          <img src="./assets/images/mail.png" alt="mail" class="stay-in-touch-icon">
+          <p class="contact-text">contact@hofmannui.net</p>
+        </li>
+        <li class="contact-success">
+          <img src="./assets/images/phone.png" alt="phone" class="stay-in-touch-icon">
+          <p class="contact-text">793-891-7938, 952-775-6021</p>
+        </li>
+      </ul>
+      <ul class="stay-in-touch-social">
+        <li><img src="./assets/images/pinterest-dark.png" alt="pinterest"></li>
+        <li><img src="./assets/images/linkedin-dark.png" alt="linkedin"></li>
+        <li><img src="./assets/images/google-plus-dark.png" alt="google-plus"></li>
+        <li><img src="./assets/images/twitter-dark.png" alt="twitter"></li>
+        <li><img src="./assets/images/facebook-dark.png" alt="facebook"></li>
+      </ul>
+    </div>
   </div>
 </section>
