Update form, placeholder

--- a/Practice2/src/partials/stay-in-touch-section.html
+++ b/Practice2/src/partials/stay-in-touch-section.html
@@ -5,14 +5,14 @@
       <source media="(min-width: 1440px)" srcset="./assets/images/iphone.png">
       <img src="./assets/images/iphone.png" alt="iphone" class="iphone-img">
     </picture>
-    <div class="stay-in-touch-container-primary">
+    <form class="stay-in-touch-container-primary">
       <div class="input-common">
         <input type="name" class="search search-common" placeholder="Name*">
         <input type="email" class="search search-common" placeholder="Email*">
       </div>
       <input type="message" class="search search-success" placeholder="Message*">
       <button type="button" class="btn btn-primary btn-submit">Submit</button>
-    </div>
+    </form>
     <div class="stay-in-touch-container-secondary">
       <ul class="stay-in-touch-contact">
         <li class="contact-success">
