--- a/Practice2/src/styles/components/stay-in-touch.css
+++ b/Practice2/src/styles/components/stay-in-touch.css
@@ -123,6 +123,7 @@
 
   .stay-in-touch-social {
     column-gap: 31px;
+    margin-bottom: 41px;
   }
 
   .input-common {
@@ -225,6 +226,7 @@
 
   .stay-in-touch-social {
     column-gap: 31px;
+    margin-bottom: 41px;
   }
 
   .mail {
