--- a/Practice2/src/styles/components/bot.css
+++ b/Practice2/src/styles/components/bot.css
@@ -15,6 +15,7 @@
   grid-template-areas:
     'b1 b2 b3'
     'b1 b4 b4';
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
 .bot-container-primary-sub {
@@ -72,7 +73,7 @@
   line-height: var(--lh-default);
 }
 
-.bot-text-list {
+.bot-text-list-sub {
   padding-top: 89px;
   display: flex;
   flex-direction: column;
@@ -96,9 +97,245 @@
   margin-bottom: 69px;
 }
 
-.bot-icon-footer {
-  width: 25px;
-  height: 25px;
+.bot-form {
+  display: flex;
+  margin-top: 19px;
 }
 
+.bot-input {
+  border: 1px solid var(--c-darker);
+  max-width: 211px;
+  max-height: 48px;
+  background-color: var(--c-dark);
+  font-size: var(--fs-default);
+  line-height: 27px;
+  padding-left: 18px;
+  padding-top: 10px;
+  padding-bottom: 11px;
+}
 
+.bot-btn-search {
+  background-color: var(--c-warning);
+  width: 51px;
+  border: 1px solid var(--c-darker);
+}
+
+@media only screen and (min-device-width: 768px) and (max-device-width: 1439px) {
+  .bot-container-primary-sub {
+    max-width: 220px;
+    padding-left: 29px;
+  }
+
+  .bot-main-heading {
+    font-size: var(--fs-tb-heading-medium);
+    line-height: var(--lh-heading-base);
+    padding-top: 25px;
+  }
+
+  .bot-text {
+    font-size: var(--fs-tb-default);
+    line-height: var(--lh-tb-default);
+    margin-top: 6px;
+  }
+
+  .bot-sub-text {
+    font-size: var(--fs-tb-small);
+    line-height: var(--lh-tb-default);
+    margin-top: 16px;
+  }
+
+  .bot-sub-heading {
+    font-size: var(--fs-tb-default);
+    line-height: 14px;
+    margin-top: 16px;
+  }
+
+  .bot-form {
+    margin-top: 13px;
+  }
+
+  .bot-input {
+    max-width: 133px;
+    max-height: 23px;
+    font-size: var(--fs-tb-small);
+    line-height: 14px;
+    padding-left: 8px;
+    padding-top: 4px;
+    padding-bottom: 5px;
+  }
+
+  .bot-input::placeholder {
+    font-size: var(--fs-tb-small);
+    line-height: 14px;
+  }
+
+  .bot-btn-search {
+    width: 25px;
+  }
+
+  .btn-img {
+    width: 4px;
+    height: 8px;
+  }
+
+  .bot-text-list-sub {
+    padding-top: 60px;
+    row-gap: 8px;
+  }
+
+  .text-list {
+    font-size: var(--fs-tb-small);
+    line-height: var(--lh-tb-default);
+  }
+
+  .bot-text-heading {
+    font-size: var(--fs-tb-default);
+    line-height: 14px;
+    margin-bottom: 14px;
+  }
+
+  .bot-text-common-icon {
+    column-gap: 20px;
+    margin-bottom: 45px;
+  }
+
+  .bot-text-footer {
+    margin-top: 32px;
+  }
+
+  .bot-icon {
+    width: 17px;
+    height: 17px;
+  }
+
+  .bot-icon-google-plus {
+    width: 26px;
+  }
+}
+
+@media only screen and (max-device-width: 767px) {
+  .page-bot {
+    flex-direction: column;
+    position: relative;
+  }
+
+  .bot-main-heading {
+    font-size: var(--fs-success);
+    line-height: 28px;
+    text-align: center;
+  }
+
+  .bot-text {
+    font-size: var(--fs-tb-default);
+    line-height: var(--lh-tb-default);
+    text-align: center;
+  }
+
+  .bot-sub-heading {
+    font-size: var(--fs-tb-default);
+    line-height: 14px;
+    text-align: center;
+  }
+
+  .bot-input {
+    max-width: 133px;
+    max-height: 23px;
+    font-size: var(--fs-tb-small);
+    line-height: 14px;
+    padding-left: 8px;
+    padding-top: 4px;
+    padding-bottom: 5px;
+  }
+
+  .bot-input::placeholder {
+    font-size: var(--fs-tb-small);
+    line-height: 14px;
+  }
+
+  .bot-btn-search {
+    width: 25px;
+  }
+
+  .btn-img {
+    width: 4px;
+    height: 8px;
+  }
+
+  .bot-container-primary-sub {
+    padding-left: 0;
+    max-width: 320px;
+  }
+
+  .bot-text-list-sub {
+    padding-top: 20px;
+    row-gap: 8px;
+  }
+
+  .text-list {
+    font-size: var(--fs-tb-default);
+    line-height: var(--lh-tb-default);
+  }
+
+  .bot-text-footer {
+    margin-top: 32px;
+  }
+
+  .bot-text-heading {
+    font-size: var(--fs-tb-default);
+    line-height: 14px;
+    margin-bottom: 13px;
+  }
+
+  .bot-text-common-icon {
+    column-gap: 20px;
+    margin-bottom: 64px;
+    justify-content: center;
+  }
+
+  .bot-icon {
+    width: 17px;
+    height: 17px;
+  }
+
+  .bot-icon-google-plus {
+    width: 26px;
+  }
+
+  .bot-container-primary {
+    width: 100%;
+  }
+
+  .bot-container-primary-sub {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: auto;
+  }
+
+  .bot-container-secondary {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width: 100%;
+  }
+
+  .bot-text-list {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .bot-container-secondary {
+    display: grid;
+    grid-template-areas:
+      'b1 b2 b3'
+      'b4 b4 b4';
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .bot-sub-text {
+    position: absolute;
+    bottom: 28px;
+    font-size: var(--fs-tb-small);
+    line-height: var(--lh-tb-default);
+  }
+}
