--- a/Practice2/src/partials/bot-section.html
+++ b/Practice2/src/partials/bot-section.html
@@ -1,15 +1,17 @@
 <section class="page-bot">
   <div class="bot-container-primary">
     <div class="bot-container-primary-sub">
-    <h5 class="bot-main-heading">Hofmann</h5>
-    <p class="bot-text">Hoffman UI Kit was made to help you quickly create beautiful layouts of responsive websites.</p>
-    <p class="bot-sub-text">© 2016 Created by Goldenfox</p>
-    <p class="bot-sub-heading">Subscribe to our news</p>
-    <form class="bot-form">
-      <input type="email" name="email" id="mail" placeholder="Your Email" class="bot-input">
-      <button class="bot-btn-search"><img src="./assets/images/subscribe.png" alt="subscribe" class="btn-img"></button>
-    </form>
-  </div>
+      <h5 class="bot-main-heading">Hofmann</h5>
+      <p class="bot-text">Hoffman UI Kit was made to help you quickly create beautiful layouts of responsive websites.
+      </p>
+      <p class="bot-sub-text">© 2016 Created by Goldenfox</p>
+      <p class="bot-sub-heading">Subscribe to our news</p>
+      <form class="bot-form">
+        <input type="email" name="email" id="mail" placeholder="Your Email" class="bot-input">
+        <button class="bot-btn-search"><img src="./assets/images/subscribe.png" alt="subscribe"
+            class="btn-img"></button>
+      </form>
+    </div>
   </div>
   <div class="bot-container-secondary">
     <ul class="bot-text-list-sub bot-one">
@@ -30,12 +32,15 @@
     <div class="bot-text-footer bot-four">
       <p class="bot-text-heading">Follow us</p>
       <ul class="bot-text-common-icon">
-        <li class="bot-icon-footer"><img src="./assets/images/pinterest-light.png" alt="pinterest" class="bot-icon"></li>
+        <li class="bot-icon-footer"><img src="./assets/images/pinterest-light.png" alt="pinterest" class="bot-icon">
+        </li>
         <li class="bot-icon-footer"><img src="./assets/images/linkedin-light.png" alt="linkedin" class="bot-icon"></li>
-        <li class="bot-icon-footer"><img src="./assets/images/google-plus-light.png" alt="google-plus" class="bot-icon bot-icon-google-plus"></li>
+        <li class="bot-icon-footer"><img src="./assets/images/google-plus-light.png" alt="google-plus"
+            class="bot-icon bot-icon-google-plus"></li>
         <li class="bot-icon-footer"><img src="./assets/images/twitter-light.png" alt="twitter" class="bot-icon"></li>
         <li class="bot-icon-footer"><img src="./assets/images/facebook-light.png" alt="facebook" class="bot-icon"></li>
-        <li class="bot-icon-footer"><img src="./assets/images/instagram-light.png" alt="instagram" class="bot-icon"></li>
+        <li class="bot-icon-footer"><img src="./assets/images/instagram-light.png" alt="instagram" class="bot-icon">
+        </li>
       </ul>
     </div>
   </div>
