--- a/Practice2/src/styles/components/features.css
+++ b/Practice2/src/styles/components/features.css
@@ -30,7 +30,7 @@
 }
 
 .media-text {
-  width: 262px;
+  max-width: 262px;
   margin-right: 69px;
 }
 
@@ -85,6 +85,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
   }
 
   .features-macbook {
