Fix and Update code

--- a/Practice2/src/partials/bot-section.html
+++ b/Practice2/src/partials/bot-section.html
@@ -15,32 +15,32 @@
   </div>
   <div class="bot-container-secondary">
     <ul class="bot-text-list-sub bot-one">
-      <li class="text-list">About Us</li>
-      <li class="text-list">Explore</li>
-      <li class="text-list">Contact</li>
+      <a href="javascript:void(0)" class="link-success"><li class="text-list">About Us</li></a>
+      <a href="javascript:void(0)" class="link-success"><li class="text-list">Explore</li></a>
+      <a href="javascript:void(0)" class="link-success"><li class="text-list">Contact</li></a>
     </ul>
     <ul class="bot-text-list-sub bot-two">
-      <li class="text-list">Testimonials</li>
-      <li class="text-list">Blog</li>
-      <li class="text-list">News</li>
+      <a href="javascript:void(0)" class="link-success"><li class="text-list">Testimonials</li></a>
+      <a href="javascript:void(0)" class="link-success"><li class="text-list">Blog</li></a>
+      <a href="javascript:void(0)" class="link-success"><li class="text-list">News</li></a>
     </ul>
     <ul class="bot-text-list-sub bot-three">
-      <li class="text-list">Documentation</li>
-      <li class="text-list">Help</li>
-      <li class="text-list">Privacy</li>
+      <a href="javascript:void(0)" class="link-success"><li class="text-list">Documentation</li></a>
+      <a href="javascript:void(0)" class="link-success"><li class="text-list">Help</li></a>
+      <a href="javascript:void(0)" class="link-success"><li class="text-list">Privacy</li></a>
     </ul>
     <div class="bot-text-footer bot-four">
       <p class="bot-text-heading">Follow us</p>
       <ul class="bot-text-common-icon">
-        <li class="bot-icon-footer"><img src="./assets/images/pinterest-light.png" alt="pinterest" class="bot-icon">
-        </li>
-        <li class="bot-icon-footer"><img src="./assets/images/linkedin-light.png" alt="linkedin" class="bot-icon"></li>
-        <li class="bot-icon-footer"><img src="./assets/images/google-plus-light.png" alt="google-plus"
-            class="bot-icon bot-icon-google-plus"></li>
-        <li class="bot-icon-footer"><img src="./assets/images/twitter-light.png" alt="twitter" class="bot-icon"></li>
-        <li class="bot-icon-footer"><img src="./assets/images/facebook-light.png" alt="facebook" class="bot-icon"></li>
-        <li class="bot-icon-footer"><img src="./assets/images/instagram-light.png" alt="instagram" class="bot-icon">
-        </li>
+        <a href="javascript:void(0)"><li class="bot-icon-footer"><img src="./assets/images/pinterest-light.png" alt="pinterest" class="bot-icon">
+        </li></a>
+        <a href="javascript:void(0)"><li class="bot-icon-footer"><img src="./assets/images/linkedin-light.png" alt="linkedin" class="bot-icon"></li></a>
+        <a href="javascript:void(0)"><li class="bot-icon-footer"><img src="./assets/images/google-plus-light.png" alt="google-plus"
+            class="bot-icon bot-icon-google-plus"></li></a>
+        <a href="javascript:void(0)"><li class="bot-icon-footer"><img src="./assets/images/twitter-light.png" alt="twitter" class="bot-icon"></li></a>
+        <a href="javascript:void(0)"><li class="bot-icon-footer"><img src="./assets/images/facebook-light.png" alt="facebook" class="bot-icon"></li></a>
+        <a href="javascript:void(0)"><li class="bot-icon-footer"><img src="./assets/images/instagram-light.png" alt="instagram" class="bot-icon">
+        </li></a>
       </ul>
     </div>
   </div>
