--- a/Practice2/src/partials/portfolio-section.html
+++ b/Practice2/src/partials/portfolio-section.html
@@ -86,11 +86,11 @@
   <div>
     <ul class="list">
       <i class="arrow left"></i>
-      <li class="number-list number-list-one">1</li>
-      <li class="number-list number-list-two">2</li>
-      <li class="number-list number-list-three">3</li>
-      <li class="number-list number-list-four">4</li>
-      <li class="number-list number-list-five">5</li>
+      <a><li class="number-list number-list-one">1</li></a>
+      <a><li class="number-list number-list-two">2</li></a>
+      <a><li class="number-list number-list-three">3</li></a>
+      <a><li class="number-list number-list-four">4</li></a>
+      <a><li class="number-list number-list-five">5</li></a>
       <i class="arrow right"></i>
     </ul>
   </div>
