--- a/Practice2/src/partials/stay-in-touch-section.html
+++ b/Practice2/src/partials/stay-in-touch-section.html
@@ -11,29 +11,29 @@
         <input type="email" class="search search-common" placeholder="Email*">
       </div>
       <input type="message" class="search search-success" placeholder="Message*">
-      <button type="button" class="btn btn-primary btn-submit">Submit</button>
+      <button type="submit" class="btn btn-primary btn-submit">Submit</button>
     </form>
     <div class="stay-in-touch-container-secondary">
       <ul class="stay-in-touch-contact">
         <li class="contact-success">
-          <img src="./assets/images/location.png" alt="location" class="stay-in-touch-icon location">
+          <a href="javascript:void(0)"><img src="./assets/images/location.png" alt="location" class="stay-in-touch-icon location"></a>
           <p class="contact-text">2300 W Arbutus Dr Citrus Springs, FL 34434, USA</p>
         </li>
         <li class="contact-success">
-          <img src="./assets/images/mail.png" alt="mail" class="stay-in-touch-icon mail">
+          <a href="javascript:void(0)"><img src="./assets/images/mail.png" alt="mail" class="stay-in-touch-icon mail"></a>
           <p class="contact-text">contact@hofmannui.net</p>
         </li>
         <li class="contact-success">
-          <img src="./assets/images/phone.png" alt="phone" class="stay-in-touch-icon phone">
+          <a href="javascript:void(0)"><img src="./assets/images/phone.png" alt="phone" class="stay-in-touch-icon phone"></a>
           <p class="contact-text">793-891-7938, 952-775-6021</p>
         </li>
       </ul>
       <ul class="stay-in-touch-social">
-        <li class="social-icon"><img src="./assets/images/pinterest-dark.png" alt="pinterest"></li>
-        <li class="social-icon"><img src="./assets/images/linkedin-dark.png" alt="linkedin"></li>
-        <li class="social-icon"><img src="./assets/images/google-plus-dark.png" alt="google-plus"></li>
-        <li class="social-icon"><img src="./assets/images/twitter-dark.png" alt="twitter"></li>
-        <li class="social-icon"><img src="./assets/images/facebook-dark.png" alt="facebook"></li>
+        <a href="javascript:void(0)"><li class="social-icon"><img src="./assets/images/pinterest-dark.png" alt="pinterest"></li></a>
+        <a href="javascript:void(0)"><li class="social-icon"><img src="./assets/images/linkedin-dark.png" alt="linkedin"></li></a>
+        <a href="javascript:void(0)"><li class="social-icon"><img src="./assets/images/google-plus-dark.png" alt="google-plus"></li></a>
+        <a href="javascript:void(0)"><li class="social-icon"><img src="./assets/images/twitter-dark.png" alt="twitter"></li></a>
+        <a href="javascript:void(0)"><li class="social-icon"><img src="./assets/images/facebook-dark.png" alt="facebook"></li></a>
       </ul>
     </div>
   </div>
