--- a/Practice2/src/partials/testimonials-section.html
+++ b/Practice2/src/partials/testimonials-section.html
@@ -10,9 +10,9 @@
         <p class="media-description">If you are an entrepreneur, you know that your success cannot depend on the
           opinions of others. Like the wind, opinions change…like the weather, opinions change frequently.</p>
         <div class="media-social">
-          <img src="./assets/images/linkedin-icon-light.png" alt="linkedin" class="media-link">
-          <img src="./assets/images/twitter-icon-light.png" alt="twitter" class="media-link">
-          <img src="./assets/images/google-plus-icon-light.png" alt="google-plus" class="media-link">
+          <a href="javascript:void(0)"><img src="./assets/images/linkedin-icon-light.png" alt="linkedin" class="media-link"></a>
+          <a href="javascript:void(0)"><img src="./assets/images/twitter-icon-light.png" alt="twitter" class="media-link"></a>
+          <a href="javascript:void(0)"><img src="./assets/images/google-plus-icon-light.png" alt="google-plus" class="media-link"></a>
         </div>
       </div>
     </div>
@@ -25,8 +25,8 @@
         <p class="media-description">Ever heard of the Fuller Brush Man? You know, those legendary guys who came
           knocking on the front doors of America, selling brushes, mops and cleaners?</p>
         <div class="media-social">
-          <img src="./assets/images/facebook-icon-light.png" alt="facebook" class="media-link">
-          <img src="./assets/images/twitter-icon-light.png" alt="twitter" class="media-link">
+          <a href="javascript:void(0)"><img src="./assets/images/facebook-icon-light.png" alt="facebook" class="media-link"></a>
+          <a href="javascript:void(0)"><img src="./assets/images/twitter-icon-light.png" alt="twitter" class="media-link"></a>
         </div>
       </div>
     </div>
@@ -40,9 +40,9 @@
           characters of Dorothy, who had wanted to run away from home because she thought there was a better place
           somewhere.</p>
         <div class="media-social">
-          <img src="./assets/images/facebook-icon-light.png" alt="facebook" class="media-link">
-          <img src="./assets/images/linkedin-icon-light.png" alt="linkedin" class="media-link">
-          <img src="./assets/images/google-plus-icon-light.png" alt="google-plus" class="media-link">
+          <a href="javascript:void(0)"><img src="./assets/images/facebook-icon-light.png" alt="facebook" class="media-link"></a>
+          <a href="javascript:void(0)"><img src="./assets/images/linkedin-icon-light.png" alt="linkedin" class="media-link"></a>
+          <a href="javascript:void(0)"><img src="./assets/images/google-plus-icon-light.png" alt="google-plus" class="media-link"></a>
         </div>
       </div>
     </div>
@@ -56,10 +56,10 @@
           almost all places nowadays you can find billboards of just about every product there is in the market. No
           matter how you see it, billboard advertising is on the rise.</p>
         <div class="media-social">
-          <img src="./assets/images/facebook-icon-light.png" alt="facebook" class="media-link">
-          <img src="./assets/images/linkedin-icon-light.png" alt="linkedin" class="media-link">
-          <img src="./assets/images/twitter-icon-light.png" alt="twitter" class="media-link">
-          <img src="./assets/images/google-plus-icon-light.png" alt="google-plus" class="media-link">
+          <a href="javascript:void(0)"><img src="./assets/images/facebook-icon-light.png" alt="facebook" class="media-link"></a>
+          <a href="javascript:void(0)"><img src="./assets/images/linkedin-icon-light.png" alt="linkedin" class="media-link"></a>
+          <a href="javascript:void(0)"><img src="./assets/images/twitter-icon-light.png" alt="twitter" class="media-link"></a>
+          <a href="javascript:void(0)"><img src="./assets/images/google-plus-icon-light.png" alt="google-plus" class="media-link"></a>
         </div>
       </div>
     </div>
