--- a/Practice2/src/partials/top-section.html
+++ b/Practice2/src/partials/top-section.html
@@ -22,9 +22,9 @@
       </li>
     </ul>
     <div class="nav-icon">
-      <img src="./assets/images/twitter-icon.png" alt="twitter-icon" class="nav-icon-success">
-      <img src="./assets/images/facebook-icon.png" alt="facebook-icon" class="nav-icon-success">
-      <img src="./assets/images/instagram-icon.png" alt="instagram-icon">
+      <a><img src="./assets/images/twitter-icon.png" alt="twitter-icon" class="nav-icon-success"></a>
+      <a><img src="./assets/images/facebook-icon.png" alt="facebook-icon" class="nav-icon-success"></a>
+      <a><img src="./assets/images/instagram-icon.png" alt="instagram-icon"></a>
     </div>
     <button class="nav-menu"><img src="./assets/images/menu-icon.png" alt="menu-icon"></button>
   </nav>
