--- a/Practice2/src/styles/components/portfolio.css
+++ b/Practice2/src/styles/components/portfolio.css
@@ -192,12 +192,17 @@
 }
 
 .number-list:hover {
-  color: var(--c-warning);
-  border: 1px solid;
-  border-radius: 50%;
   width: 32px;
   height: 32px;
-  text-align: center;
+  text-decoration: none;
+  border: 1px solid;
+  color: var(--c-warning);
+  border-radius: 50%;
+  font-size: var(--fs-tb-default);
+  line-height: var(--lh-default);
+  display: flex;
+  justify-content: center;
+  align-items: center;
   box-shadow: 0px 2px 4px var(--c-dark);
 }
 
