--- a/Practice2/src/partials/portfolio-section.html
+++ b/Practice2/src/partials/portfolio-section.html
@@ -86,11 +86,11 @@
   <div>
     <ul class="list">
       <i class="arrow left"></i>
-      <a><li class="number-list number-list-one">1</li></a>
-      <a><li class="number-list number-list-two">2</li></a>
-      <a><li class="number-list number-list-three">3</li></a>
-      <a><li class="number-list number-list-four">4</li></a>
-      <a><li class="number-list number-list-five">5</li></a>
+      <li class="number-list number-list-one"><a href="javascript:void(0)" class="link-dark">1</a></li>
+      <li class="number-list number-list-two"><a href="javascript:void(0)" class="link-dark">2</a></li>
+      <li class="number-list number-list-three"><a href="javascript:void(0)" class="link-dark">3</a></li>
+      <li class="number-list number-list-four"><a href="javascript:void(0)" class="link-dark">4</a></li>
+      <li class="number-list number-list-five"><a href="javascript:void(0)" class="link-dark">5</a></li>
       <i class="arrow right"></i>
     </ul>
   </div>
