--- a/Practice2/src/partials/bot-section.html
+++ b/Practice2/src/partials/bot-section.html
@@ -8,39 +8,42 @@
       <p class="bot-sub-heading">Subscribe to our news</p>
       <form class="bot-form">
         <input type="email" name="email" id="mail" placeholder="Your Email" class="bot-input">
-        <button class="bot-btn-search"><img src="./assets/images/subscribe.png" alt="subscribe"
+        <button type="submit" class="bot-btn-search"><img src="./assets/images/subscribe.png" alt="subscribe"
             class="btn-img"></button>
       </form>
     </div>
   </div>
   <div class="bot-container-secondary">
     <ul class="bot-text-list-sub bot-one">
-      <a href="javascript:void(0)" class="link-success"><li class="text-list">About Us</li></a>
-      <a href="javascript:void(0)" class="link-success"><li class="text-list">Explore</li></a>
-      <a href="javascript:void(0)" class="link-success"><li class="text-list">Contact</li></a>
+      <li class="text-list"><a href="javascript:void(0)" class="link-success">About Us</a></li>
+      <li class="text-list"><a href="javascript:void(0)" class="link-success">Explore</a></li>
+      <li class="text-list"><a href="javascript:void(0)" class="link-success">Contact</a></li>
     </ul>
     <ul class="bot-text-list-sub bot-two">
-      <a href="javascript:void(0)" class="link-success"><li class="text-list">Testimonials</li></a>
-      <a href="javascript:void(0)" class="link-success"><li class="text-list">Blog</li></a>
-      <a href="javascript:void(0)" class="link-success"><li class="text-list">News</li></a>
+      <li class="text-list"><a href="javascript:void(0)" class="link-success">Testimonials</a></li>
+      <li class="text-list"><a href="javascript:void(0)" class="link-success">Blog</a></li>
+      <li class="text-list"><a href="javascript:void(0)" class="link-success">News</a></li>
     </ul>
     <ul class="bot-text-list-sub bot-three">
-      <a href="javascript:void(0)" class="link-success"><li class="text-list">Documentation</li></a>
-      <a href="javascript:void(0)" class="link-success"><li class="text-list">Help</li></a>
-      <a href="javascript:void(0)" class="link-success"><li class="text-list">Privacy</li></a>
+      <li class="text-list"><a href="javascript:void(0)" class="link-success">Documentation</a></li>
+      <li class="text-list"><a href="javascript:void(0)" class="link-success">Help</a></li>
+      <li class="text-list"><a href="javascript:void(0)" class="link-success">Privacy</a></li>
     </ul>
     <div class="bot-text-footer bot-four">
       <p class="bot-text-heading">Follow us</p>
       <ul class="bot-text-common-icon">
-        <a href="javascript:void(0)"><li class="bot-icon-footer"><img src="./assets/images/pinterest-light.png" alt="pinterest" class="bot-icon">
-        </li></a>
-        <a href="javascript:void(0)"><li class="bot-icon-footer"><img src="./assets/images/linkedin-light.png" alt="linkedin" class="bot-icon"></li></a>
-        <a href="javascript:void(0)"><li class="bot-icon-footer"><img src="./assets/images/google-plus-light.png" alt="google-plus"
-            class="bot-icon bot-icon-google-plus"></li></a>
-        <a href="javascript:void(0)"><li class="bot-icon-footer"><img src="./assets/images/twitter-light.png" alt="twitter" class="bot-icon"></li></a>
-        <a href="javascript:void(0)"><li class="bot-icon-footer"><img src="./assets/images/facebook-light.png" alt="facebook" class="bot-icon"></li></a>
-        <a href="javascript:void(0)"><li class="bot-icon-footer"><img src="./assets/images/instagram-light.png" alt="instagram" class="bot-icon">
-        </li></a>
+        <li class="bot-icon-footer"><a href="javascript:void(0)"><img src="./assets/images/pinterest-light.png"
+              alt="pinterest" class="bot-icon"></a></li>
+        <li class="bot-icon-footer"><a href="javascript:void(0)"><img src="./assets/images/linkedin-light.png"
+              alt="linkedin" class="bot-icon"></a></li>
+        <li class="bot-icon-footer"><a href="javascript:void(0)"><img src="./assets/images/google-plus-light.png"
+              alt="pinterest" class="bot-icon"></a></li>
+        <li class="bot-icon-footer"><a href="javascript:void(0)"><img src="./assets/images/twitter-light.png"
+              alt="linkedin" class="bot-icon"></a></li>
+        <li class="bot-icon-footer"><a href="javascript:void(0)"><img src="./assets/images/facebook-light.png"
+              alt="pinterest" class="bot-icon"></a></li>
+        <li class="bot-icon-footer"><a href="javascript:void(0)"><img src="./assets/images/instagram-light.png"
+              alt="linkedin" class="bot-icon"></a></li>
       </ul>
     </div>
   </div>
