--- a/Practice2/src/styles/components/portfolio.css
+++ b/Practice2/src/styles/components/portfolio.css
@@ -224,6 +224,11 @@
   -webkit-transform: rotate(135deg);
 }
 
+.link-dark {
+  color: var(--c-dark);
+  text-decoration: none;
+}
+
 @media only screen and (min-device-width: 768px) and (max-device-width: 1439px) {
   .blue-mountain-heading {
     font-size: var(--fs-tb-heading-medium);
